Fixed overflow

--- a/src/app/scribbler/added-document/added-document.component.scss
+++ b/src/app/scribbler/added-document/added-document.component.scss
@@ -1,8 +1,9 @@
 .scribber-document
 {
     display: grid;
-    grid-template-columns: 20% 70% 10%;
+    grid-template-columns: 15% 75% 10%;
     height: 101px;
+    padding: 5px
 }
 
 .scribber-document div
@@ -15,4 +16,48 @@
     display: flex;
     justify-self: center;
     align-items: center;
+}
+
+.content-info
+{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.title-container h3
+{
+    margin: 0;
+    font-size: 20px;
+}
+
+.title-container
+{
+    margin-top: 20px;
+    width: 100%;
+    height: 40.5px !important;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space:nowrap
+}
+
+.button-actions
+{
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+}
+
+#description-icon
+{
+    font-size: 50px;
+    width: 50px;
+    height: 50px;
+    color: #3d56b2;
+}
+
+button
+{
+    font-size: smaller;
 }
