--- a/src/app/scribbler/scribbler.component.scss
+++ b/src/app/scribbler/scribbler.component.scss
@@ -10,8 +10,7 @@
 
     .document {
         background-color: white;
-        min-width: 70%;
-        max-width: 80%;
+        width: 90%;
         margin-top: 20px;
         border-radius: 20px;
     }
